src/test/deca/context/invalid/without_class/incompatible_type_geq_int_string.deca
// Description:
//    Error : operator comparison not defined with type string
//
// Result:
//    INCOMPATIBLE_TYPE_OPERATOR: Type \(.\)\+ is incompatible with type \(.\)\+ for the operator \(.\)\+
//    line 9
{
    int a = 1;
    boolean result = a >= "Hello"; 
}